k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: populi-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - populi.local.sifft.io
      secretName: wildcard-local-sifft-io-tls
  rules:
    - host: populi.local.sifft.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: populi-frontend-svc
                port:
                  number: 80
